fix alignment of city graph

--- a/css/main.css
+++ b/css/main.css
@@ -214,7 +214,7 @@ div.byline{
 }
 div.city-graph{ 
   position:absolute;
-  bottom:-23px;
+  bottom:-28px;
   text-align:center;
   width:100%;
 }
